<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


       <include layout="@layout/toolbar"
           android:layout_height="?attr/actionBarSize"
           android:layout_width="match_parent"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WhiteColor"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayout_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:focusable="false"
                android:textColorHint="@color/Brown">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/BlackColor"
                    android:textColorHint="@color/Brown"
                    android:textSize="15sp"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayout_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/Brown">

                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_pass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/BlackColor"
                    android:textColorHint="@color/RedColor"
                    android:textSize="15sp"

                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_loginAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/list_selector_button_focused"
                android:text="@string/btn_login"
                android:textColor="@color/WhiteColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/BlackColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="Hoặc"
                    android:textColor="@color/BlackColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/BlackColor" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/WhiteColor"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <Button
                        android:id="@+id/btn_loginFB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/list_selecter_button_facebook"
                        android:drawableLeft="@drawable/facebook"
                        android:drawablePadding="20dp"
                        android:gravity="left|center"
                        android:paddingLeft="20dp"
                        android:text="@string/btn_login_fb"
                        android:textColor="@color/WhiteColor" />

                    <Button
                        android:id="@+id/btn_loginGoogle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/list_selector_button_focused"
                        android:drawableLeft="@drawable/google_p"
                        android:drawablePadding="20dp"
                        android:gravity="left|center"
                        android:paddingLeft="20dp"
                        android:text="@string/btn_login_google"
                        android:textColor="@color/WhiteColor" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BlackColor"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtv_forgotpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtv_forgot_pass"
                android:textColor="@color/WhiteColor"
                android:textSize="20sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/WhiteColor" />

            <TextView
                android:id="@+id/txtv_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtv_register"
                android:textColor="@color/WhiteColor"
                android:textSize="20sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/txtv_next"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="Tiếp tục"
            android:visibility="gone"
            android:textSize="20sp"
            android:gravity="center_vertical|right"
            android:textColor="@color/WhiteColor"
            android:paddingRight="15dp"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>
